加入网络断开判断逻辑